<resources>
    <string name="app_name">Android架构</string>
    <string name="str_password_hint">请输入你的密码6&#8211;20位</string>
    <string name="str_account_hint">请输入你的账号4&#8211;20位</string>
    <string name="str_mvc">MVC</string>
    <string name="str_mvp">MVP</string>
    <string name="str_mvvm">MVVM</string>
    <string name="str_login">登录</string>
    <string name="str_account">账号:</string>
    <string name="str_password">密码:</string>
    <string name="str_back">返回</string>
</resources>