<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@color/color_188FFF"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_60"
        android:layout_marginTop="@dimen/dimen_60"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_account"
            android:textSize="@dimen/text_size_18"/>
        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginStart="@dimen/dimen_5"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxLength="20"
            android:hint="@string/str_account_hint"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_60"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_password"
            android:textSize="@dimen/text_size_18" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/dimen_5"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxLength="20"
            android:hint="@string/str_password_hint"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        style="@style/SCCBtnStyle"
        android:layout_marginTop="@dimen/dimen_30"
        android:text="@string/str_login"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/btn_back"
        style="@style/SCCBtnStyle"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/str_back"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>